<resources>
    <string name="app_name">MyCovid 0.2</string>

    <!-- Onboarding -->
    <string name="onboarding_continue_btn">"Continue"</string>
    <string name="onboarding_finish_btn">"Finish"</string>
    <string name="reset_onboarding">"Reset onboarding"</string>
    <string name="onboarding_aim_heading">"The aim"</string>
    <string name="onboarding_aim_title">"Getting started!"</string>
    <string name="onboarding_aim_text1">"MyCovid is a privacy-preserving contact tracing application that helps the government efforts in fighting the Covid-19 pandemic."</string>
    <string name="onboarding_aim_text2">"This app will determine possible infection and alert it to you"</string>
    <string name="onboarding_privacy_heading">"Privacy by design"</string>
    <string name="onboarding_privacy_title">"Preservation of privacy"</string>
    <string name="onboarding_privacy_text1">"Devices exchange data without revealing your identity."</string>
    <string name="onboarding_privacy_text2">"All data is encrypted and only saved locally on the smartphone."</string>
    <string name="onboarding_hiw_heading">"How it works?"</string>
    <string name="onboarding_hiw_title">"How it works?"</string>
    <string name="onboarding_hiw_text1">"The app uses Bluetooth Low Energy (BLE) to automatically detect when two device is in close proximity."</string>
    <string name="onboarding_hiw_text2">"It does not use location critical data like GPS or continuous internet connection."</string>
    <string name="onboarding_whatitdoes_heading">"What does the app do?"</string>
    <string name="onboarding_whatitdoes_title">"Infection report"</string>
    <string name="onboarding_whatitdoes_text1">"If a possible infection is suspected, the app will notify you."</string>
    <string name="onboarding_whatitdoes_text2">"You can protect yourself and others by taking action like quarantine."</string>
    <string name="onboarding_bluetooth_title">"Enable Bluetooth"</string>
    <string name="onboarding_bluetooth_text">"MyCovid need Bluetooth and Notification"</string>
    <string name="onboarding_bluetooth_button">"Enable Bluetooth"</string>
    <string name="onboarding_gtk">"Information"</string>
    <string name="onboarding_bluetooth_gtk_title1">"Anonymous"</string>
    <string name="onboarding_bluetooth_gtk_text1">"No personal data is exchanged."</string>
    <string name="onboarding_bluetooth_gtk_title2">"Battery usage"</string>
    <string name="onboarding_bluetooth_gtk_text2">"MyCovid will not affect your battery significantly."</string>
    <string name="onboarding_push_title">"Allow notification"</string>
    <string name="onboarding_push_text">"Please allow notifications in order to get alerts from the MyCovid."</string>
    <string name="onboarding_push_button">"Allow"</string>
    <string name="onboarding_push_gtk_title1">"Immediate alert"</string>
    <string name="onboarding_push_gtk_text1">"You'll get a notification on the lock screen if there's a possible infection."</string>
    <string name="onboarding_go_title">"You are all set up!"</string>
    <string name="onboarding_go_text">"Be careful when going out and watch for our notification for possible infection."</string>
    <string name="onboarding_go_button">"Home"</string>
    <string name="android_onboarding_bt_permission_title">"Toggle on Bluetooth location."</string>
    <string name="android_onboarding_bt_permission_text">"You must activate the location function in order for the app to run and for Bluetooth to be accessible."</string>
    <string name="android_onboarding_bt_permission_button">"Allow"</string>
    <string name="android_onboarding_bt_permission_gtk">"Good to know"</string>
    <string name="android_onboarding_bt_permission_info1_title">"Your location is safe"</string>
    <string name="android_onboarding_bt_permission_info1_text">"On Android devices, enabling Bluetooth requires you to enable the sharing of your location. the app does not register your location at any point in time."</string>
    <string name="android_onboarding_bt_permission_info2_title">"You remain anonymous"</string>
    <string name="android_onboarding_bt_permission_info2_text">"No personal data is visible via Bluetooth."</string>
    <string name="android_onboarding_battery_permission_title">"Ignore battery optimisation"</string>
    <string name="android_onboarding_battery_permission_text">"To identify encounters at all times, the battery optimization feature must be turned off."</string>
    <string name="android_onboarding_battery_permission_button">"Allow"</string>
    <string name="android_onboarding_battery_permission_info1_title">"Only for MyCovid"</string>
    <string name="android_onboarding_battery_permission_info1_text">"The application must also operate in the background in order to function since battery optimization is turned off for this app."</string>
    <string name="android_onboarding_battery_permission_info2_title">"Minor increase in battery usage"</string>
    <string name="android_onboarding_battery_permission_info2_text">"The app uses as little energy as possible to function.."</string>
    <string name="android_onboarding_bt_permission_button_allowed">"Enabled"</string>
    <string name="android_onboarding_battery_permission_button_deactivated">"Deactivated"</string>
    <string name="tracing_active_text">Tracing is active</string>
    <string name="tracing_turned_off_text">Tracing is inactive. Please reactivate tracing.</string>
    <string name="tracing_ended_text">No futher encounter registered</string>
    <string name="no_reports_title">No report</string>
    <string name="exposed_title">Possible infection</string>
    <string name="test_positive_title">Tested positive</string>
    <string name="no_report_subtitle">No potential infection is reported</string>
    <string name="exposed_subtitle">A suspected infection is exposed</string>
    <string name="test_positive_subtitle">You are tested positive for the virus</string>
    <string name="error_location_title">Location services is disabled</string>
    <string name="error_ble_title">Bluetooth is disabled</string>
    <string name="error_battery_title">Battery optimizer is activated</string>
    <string name="error_time_title">Time synchronize error</string>
    <string name="error_general_title">Unexpected error</string>
    <string name="error_BLE_title">Restart required</string>
    <string name="retry_button" />
    <string name="error_retry_button">Retry</string>
    <string name="allow_button">Allow</string>
    <string name="pls_ble_title">Please turn on Bluetooth</string>
    <string name="bluetooth_disabled_title">Bluetooth is disabled</string>
    <string name="bluetooth_disabled_subtitle">Please enable bluetooth to resume tracing</string>
    <string name="bluetooth_on_button">Turn on Bluetooth</string>
    <string name="android_accessibility_back_button">Back</string>
    <string name="handshakes_title_homescreen">Encounters</string>
    <string name="tracing_setting_title">Tracing</string>
    <string name="tracing_setting_text">Allow tracing</string>
    <string name="location_btn_permission">Location is enabled</string>
    <string name="android_foreground_service_notification_error_location_permission">Android requires location to be enabled to use the Bluetooth feature.</string>
    <string name="button_ok">Okay</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Statistic Fragment</string>
    <string name="case_active_subtitle">Total active cases as of </string>
    <string name="percent">%</string>
    <string name="what_to_do_title">What should you do?</string>
    <string name="what_to_do_text">You should obtain the authorisation code after you have been tested  positive for the virus.  By entering this code,  you will alert others.</string>
    <string name="what_to_do_title1">Common symptoms</string>
    <string name="what_to_do_text1">Feeling ill? Find out about Covid-19 symptoms</string>
    <string name="what_to_do_title2">How to test?</string>
    <string name="what_to_do_text2">Check out the Ministry of Health website listed health facilities to get tested and other methods to test.</string>
    <string name="what_to_do_info_title">What is the code?</string>
    <string name="what_to_do_info_text">"Those who has been tested positive for coronavirus (self test kit or from test facility) will receive the code. "</string>
    <string name="what_to_do_info1_title">What type of data is sent?</string>
    <string name="what_to_do_info1_text">Only the private keys from the app and encrypted ID is sent. There are no personal data sent to the server.</string>
    <string name="what_to_do_info2_title">Will I still be anonymous?</string>
    <string name="what_to_do_info2_text">Yes. although no personal data is transmitted, someone may remember their encounter from the date but it is unlikely.</string>
    <string name="symptoms_info_title">Most common:</string>
    <string name="symptoms_info_desc">\u25CF Fever \n\u25CF Cough \n\u25CF Tiredness \n\u25CF Loss of taste or smell</string>
    <string name="symptoms_info_title2">Serious symptoms:</string>
    <string name="symptoms_info_desc2">\u25CF Difficulty breathing or shortness of breath \n\u25CF Loss of speech or mobility, or confusion \n\u25CF Chest pain</string>
    <string name="hyperlink2"> <a href="https://www.who.int/health-topics/coronavirus#tab=tab_3">Further information</a></string>
    <string name="hyperlink3"><a href="https://covid-19.moh.gov.my/terkini">View more statistics</a></string>
    <string name="test_info_title">Self test</string>
    <string name="test_info_desc">You can now able to test for covid yourself by buying covid-19 test kit from authorised store.\n\n<a href="https://portal.mda.gov.my/infographic/768-conditional-approval-list-of-covid-19-test-kit-for-self-test-8-nov-2021.html">View list of approved self-test kit</a></string>
    <string name="test_info_title2">Test facilities</string>
    <string name="test_info_desc2">Another alternative to test is by visiting your nearest testing facilities from clinics to hospitals.\n\n<a href="https://covid-19.moh.gov.my/fasiliti-kesihatan/hospital-swasta-dan-klinik-swasta-berdaftar-untuk-covid19">View test facilities in Malaysia</a></string>
    <string name="reports_title">Reports</string>
    <string name="protect_yourself_text">Protect yourself</string>
    <string name="follow_government_text">Follow the government instruction about hygiene and keeping 1 meter physical distancing.</string>
    <string name="link_to_gov_steps">View government recommendations</string>
    <string name="call_us_text">Reach out to us</string>
    <string name="call_number_text">42069</string>
    <string name="call_number_text_subtitle">Malaysian Covid-19 infoline</string>
    <string name="call_button">Call now</string>
    <string name="self_quarantine_text">Self quarantine</string>
    <string name="follow_government_self_text">Follow government\'s instruction on self-quarantine.</string>
    <string name="link_to_gov_self_steps">How to self-quarantine</string>
    <string name="government_recommend_link">https://covid-19.moh.gov.my/garis-panduan/gp-umum-covid19</string>
    <string name="how_self_quarantine">https://covid-19.moh.gov.my/garis-panduan/pemantauan-kendiri-kes-positif-covid-19-di-rumah</string>
    <string name="infoline_number">0377239300</string>
    <string name="new_contact_detail_title">New report</string>
    <string name="new_contact_detail_subtitle">An infection could be possible on this day.</string>
    <string name="positive_tested_title">Tested positive</string>
    <string name="positive_tested_subtitle">You tested positive for the coronavirus disease.</string>
    <string name="button_permission_location">Allow location</string>

</resources>