<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/grey_light"
    android:gravity="center_horizontal"
    android:padding="@dimen/spacing_large"
    android:layout_margin="@dimen/margin_status_error"
    >

    <ImageView
        android:id="@+id/error_status_image"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:src="@drawable/ic_bluetooth_disable" />

    <TextView
        android:id="@+id/error_status_title"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/spacing_small"
        android:paddingBottom="@dimen/spacing_small"
        android:text="@string/bluetooth_disabled_title" />

    <TextView
        android:id="@+id/error_status_text"
        style="@style/NextStep.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="@dimen/spacing_small"
        android:text="@string/bluetooth_disabled_subtitle" />

    <TextView
        android:id="@+id/error_status_button"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/spacing_small"
        android:background="?selectableItemBackground"
        android:text="@string/bluetooth_on_button"
        android:visibility="visible"/>

</LinearLayout>