<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_encounters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?selectableItemBackground"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingBottom="25dp">


        <TextView
            android:id="@+id/card_encounters_title"
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_us_text"
            android:paddingTop="15dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="25dp" />

        <ImageView
            android:id="@+id/card_encounters_image"
            android:layout_width="92dp"
            android:layout_height="99dp"
            android:src="@drawable/person1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_encounters_title" />

        <Space
            android:id="@+id/card_encounters_space1"
            android:layout_width="@dimen/spacing_medium"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="@id/card_encounters_image"
            app:layout_constraintTop_toTopOf="@id/card_encounters_image" />

        <LinearLayout
            android:id="@+id/card_encounters_text_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium_large"
            android:paddingBottom="15dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/card_encounters_image"
            app:layout_constraintTop_toTopOf="@id/card_encounters_image">


            <TextView
                android:id="@+id/card_encounters_text"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/call_number_text" />

            <TextView
                style="@style/NextStep.Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/call_number_text_subtitle" />

        </LinearLayout>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/card_barrier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="card_encounters_text_container,card_encounters_image" />

        <Button
            android:id="@+id/report_call_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/call_button"
            app:layout_constraintTop_toBottomOf="@id/card_barrier" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>



</LinearLayout>