<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_light"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/contact_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationContentDescription="@string/android_accessibility_back_button"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/handshakes_title_homescreen" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_light">

        <ScrollView
            android:id="@+id/contacts_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/top_item_padding">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_medium_large"
                    android:layout_marginEnd="@dimen/spacing_medium_large"
                    android:layout_marginBottom="@dimen/spacing_medium">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/spacing_large"
                            android:layout_marginTop="@dimen/spacing_medium_large"
                            android:layout_marginRight="@dimen/spacing_large"
                            android:layout_marginBottom="@dimen/spacing_medium">

                            <androidx.appcompat.widget.SwitchCompat
                                android:id="@+id/contacts_tracing_switch"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_alignParentEnd="true"
                                android:layout_marginTop="3dp" />

                            <TextView
                                android:id="@+id/contacts_tracing_title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentTop="true"
                                android:layout_toStartOf="@id/contacts_tracing_switch"
                                android:text="@string/tracing_setting_title" />

                            <TextView
                                style="@style/NextStep.Text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/contacts_tracing_title"
                                android:layout_alignParentStart="true"
                                android:text="@string/tracing_setting_text" />

                        </RelativeLayout>

                        <FrameLayout
                            android:id="@+id/status_container"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </ScrollView>

    </FrameLayout>

</LinearLayout>