<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_encounters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?selectableItemBackground"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingBottom="25dp">


        <TextView
            android:id="@+id/card_encounters_title"
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/self_quarantine_text"
            android:paddingTop="15dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="25dp" />

        <ImageView
            android:id="@+id/card_encounters_image"
            android:layout_width="92dp"
            android:layout_height="99dp"
            android:src="@drawable/person1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_encounters_title" />

        <Space
            android:id="@+id/card_encounters_space1"
            android:layout_width="@dimen/spacing_medium"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="@id/card_encounters_image"
            app:layout_constraintTop_toTopOf="@id/card_encounters_image" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium_large"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/card_encounters_image"
            app:layout_constraintTop_toTopOf="@id/card_encounters_image">

            <TextView
                android:id="@+id/card_encounters_text"
                style="@style/NextStep.Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/follow_government_self_text" />

            <LinearLayout
                android:id="@+id/card_encounters_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginRight="@dimen/spacing_small"
                    android:src="@drawable/ic_baseline_launch_24"
                    app:tint="@color/blue_main" />

                <TextView
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/link_to_gov_self_steps"
                    android:textColor="@color/blue_main"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>